--- a/src/app/pages/Transporter/fuel-ledger/fuel-ledger.component.html
+++ b/src/app/pages/Transporter/fuel-ledger/fuel-ledger.component.html
@@ -1,1 +1,5 @@
-<p>fuel-ledger works!</p>
+
+<div class="card-header">
+    <b>LEDGER TRANSACTION-WISE</b>
+</div>
+<app-trans-tables-widget9></app-trans-tables-widget9> 
