--- a/src/app/pages/Transporter/view-credit-purchase/view-credit-purchase.component.html
+++ b/src/app/pages/Transporter/view-credit-purchase/view-credit-purchase.component.html
@@ -1,1 +1,5 @@
-<p>view-credit-purchase works!</p>
+
+<div class="card-header">
+    <b>VIEW CREDIT PURCHASE</b>
+</div>
+<app-trans-tables-widget7></app-trans-tables-widget7> 
