--- a/src/app/pages/Transporter/view-credit-payment/view-credit-payment.component.html
+++ b/src/app/pages/Transporter/view-credit-payment/view-credit-payment.component.html
@@ -1,1 +1,5 @@
-<p>view-credit-payment works!</p>
+
+<div class="card-header">
+    <b>VIEW CREDIT PAYMENT</b>
+</div>
+<app-trans-tables-widget8></app-trans-tables-widget8> 
