changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget8/pump-tables-widget8.component.html
+++ b/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget8/pump-tables-widget8.component.html
@@ -245,8 +245,8 @@
 
                                             </table>
                                             <!-- begin::Pagination -->
-                                            <pagination-controls (pageChange)="pageChangeEvent($event)"
-                                                previousLabel="" nextLabel=""
+                                            <pagination-controls (pageChange)="pageChangeEvent($event)" previousLabel=""
+                                                nextLabel=""
                                                 style="text-align: end; font-size: x-large; font-family: 'Font Awesome 6 Free'; font-style: oblique;">
                                             </pagination-controls>
                                             <!-- end::Pagination -->
@@ -325,8 +325,8 @@
                                             </table>
 
                                             <!-- begin::Pagination -->
-                                            <pagination-controls (pageChange)="pageChangeEvent($event)"
-                                                previousLabel="" nextLabel=""
+                                            <pagination-controls (pageChange)="pageChangeEvent($event)" previousLabel=""
+                                                nextLabel=""
                                                 style="text-align: end; font-size: x-large; font-family: 'Font Awesome 6 Free'; font-style: oblique;">
                                             </pagination-controls>
                                             <!-- end::Pagination -->
@@ -423,8 +423,8 @@
 
                                             </table>
                                             <!-- begin::Pagination -->
-                                            <pagination-controls (pageChange)="pageChangeEvent($event)"
-                                                previousLabel="" nextLabel=""
+                                            <pagination-controls (pageChange)="pageChangeEvent($event)" previousLabel=""
+                                                nextLabel=""
                                                 style="text-align: end; font-size: x-large; font-family: 'Font Awesome 6 Free'; font-style: oblique;">
                                             </pagination-controls>
                                             <!-- end::Pagination -->
