--- a/src/app/_metronic/partials/content/widgets/trans-tables/trans-tables-widget1/trans-tables-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/trans-tables/trans-tables-widget1/trans-tables-widget1.component.html
@@ -169,7 +169,7 @@
                         <span class="d-none d-sm-block" style="font-size: 13.5px;">FASTAG PAYMENT/ RECHARGE</span>
                       </a>
                       <ng-template ngbNavContent>
-                        <!-- <app-trans-tables-widget1></app-trans-tables-widget1>  -->
+                        <app-trans-tables-widget5></app-trans-tables-widget5> 
                       </ng-template>
                     </li>
                   </ul>
