changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget5/mixed-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget5/mixed-widget5.component.html
@@ -32,7 +32,7 @@
     </form>
   </div>
   <br>
-  <div class="table-responsive mb-0">
+  <div *ngIf="statementData.length" class="table-responsive mb-0">
     <table class="table table-centered table-nowrap table-bordered" style="border: 1px solid black;">
       <thead class="">
         <tr>
