changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget1/base-tables-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget1/base-tables-widget1.component.html
@@ -714,7 +714,7 @@
                 <div class="row noprint">
                   <div class="col-md-8"></div>
                   <div class="col-md-2">
-                    <button class="btn btn-success" printSectionId="sanjay" ngxPrint>print</button>
+                    <button class="btn btn-success" printSectionId="sanjay" [useExistingCss]="true" ngxPrint>print</button>
                   </div>
                 </div>
                 <div id="sanjay">
@@ -1559,7 +1559,7 @@
           <div class="row noprint">
             <div class="col-md-8"></div>
             <div class="col-md-2">
-              <button class="btn btn-success" printSectionId="sanjay" ngxPrint>print</button>
+              <button class="btn btn-success" printSectionId="sanjay" [useExistingCss]="true" ngxPrint>print</button>
             </div>
           </div>
           <div id="sanjay">
