--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget11/base-tables-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget11/base-tables-widget11.component.html
@@ -87,7 +87,7 @@
 
   <div id="page-wrap">
     <div class="col-md-12">
-      &nbsp; <button class="noprint" style="font-size: medium;"  printSectionId="sanjay" ngxPrint> &nbsp;&nbsp;<i
+      &nbsp; <button class="noprint" style="font-size: medium;"  printSectionId="sanjay" [useExistingCss]="true" ngxPrint> &nbsp;&nbsp;<i
           class="fa fa-print" aria-hidden="true"></i> &nbsp;</button>
     </div>
 
@@ -464,7 +464,7 @@
 <body id="contentToConvert" *ngIf="showStatement5">
   <div id="page-wrap">
     <div class="col-md-12">
-      &nbsp; <button class="noprint" style="font-size: medium;"  printSectionId="sanjay" ngxPrint> &nbsp;&nbsp;<i
+      &nbsp; <button class="noprint" style="font-size: medium;"  printSectionId="sanjay" [useExistingCss]="true" ngxPrint> &nbsp;&nbsp;<i
           class="fa fa-print" aria-hidden="true"></i> &nbsp;</button>
     </div>
 
