--- a/src/app/_metronic/partials/content/widgets/feeds/feeds-widget11/feeds-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/feeds/feeds-widget11/feeds-widget11.component.html
@@ -50,7 +50,7 @@
         </div>
         <div class="col-md-2"></div>
         <div class="col-auto">
-          <button class="btn btn-success" printSectionId="sanjay" ngxPrint>print
+          <button class="btn btn-success" printSectionId="sanjay" [useExistingCss]="true" ngxPrint>print
           </button>
         </div>
         <div class="col-auto">
