--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget4/lists-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget4/lists-widget4.component.html
@@ -132,7 +132,7 @@
                   routerLink="/credit/AddLubeTaxGstSale"> Back </button>
               </div>
               <div class="col-md-1">
-                &nbsp; <button class="noprint" style="font-size: medium;" printSectionId="sanjay" ngxPrint> &nbsp;&nbsp;<i
+                &nbsp; <button class="noprint" style="font-size: medium;" printSectionId="sanjay" [useExistingCss]="true" ngxPrint> &nbsp;&nbsp;<i
                     class="fa fa-print" aria-hidden="true"></i> &nbsp;</button>
               </div>
             </div>
