--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget14/mixed-widget14.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget14/mixed-widget14.component.html
@@ -13,7 +13,7 @@
                     aria-hidden="true"></i> &nbsp;</button>
         </div> -->
     <div class="col-auto">
-      <button class="btn btn-success"  printSectionId="sanjay" ngxPrint>print </button>
+      <button class="btn btn-success"  printSectionId="sanjay" [useExistingCss]="true" ngxPrint>print </button>
     </div>
 
     <div id="sanjay">
