--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget6/mixed-widget6.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget6/mixed-widget6.component.html
@@ -84,7 +84,7 @@
 
     <div id="page-wrap">
       <div class="col-md-12">
-        &nbsp; <button class="noprint" style="font-size: medium;"  printSectionId="sanjay" ngxPrint> &nbsp;&nbsp;<i
+        &nbsp; <button class="noprint" style="font-size: medium;"  printSectionId="sanjay" [useExistingCss]="true" ngxPrint> &nbsp;&nbsp;<i
             class="fa fa-print" aria-hidden="true"></i> &nbsp;</button>
       </div>
       <!-- Designed BY SANJAY sir Added BY PRAMOD  27/02/2021 -->
@@ -740,7 +740,7 @@
         <div class="d-print-none">
           <div class="float-end">
             <!-- <a href="javascript:window.print()" class="btn btn-success"><i class="fa fa-print"></i></a> -->
-             <button class="noprint" style="font-size: medium;"  printSectionId="sanjay" ngxPrint> &nbsp;&nbsp;<i
+             <button class="noprint" style="font-size: medium;"  printSectionId="sanjay" [useExistingCss]="true" ngxPrint> &nbsp;&nbsp;<i
             class="fa fa-print" aria-hidden="true"></i> &nbsp;</button>
           </div>
         </div>
