--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget7/mixed-widget7.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget7/mixed-widget7.component.html
@@ -101,7 +101,7 @@
                    -->
         <!-- <button *ngIf="isSetPath == 'Individual'" class="btn btn-outline-success my-2 my-sm-0 btn-sm "(click) = "goToBack()">Back</button></span> -->
 
-        &nbsp; <button class="noprint" style="font-size: medium;" printSectionId="sanjay" ngxPrint> &nbsp;&nbsp;<i
+        &nbsp; <button class="noprint" style="font-size: medium;" printSectionId="sanjay" [useExistingCss]="true" ngxPrint> &nbsp;&nbsp;<i
             class="fa fa-print" aria-hidden="true"></i> &nbsp;</button>
       </div>
 
