--- a/src/app/modules/auth/components/home/home.component.html
+++ b/src/app/modules/auth/components/home/home.component.html
@@ -1,3 +1,9 @@
+<style>
+html {
+  scroll-behavior: smooth;
+}
+</style>
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -65,7 +71,7 @@
             <li><a class="nav-link scrollto " style="font-size: 20px;"  href="/auth/about">About</a></li>
             <li><a class="nav-link " style="font-size: 20px;"  href="/auth/login">Login</a></li>
             <!-- <li><a class="nav-link " routerLink="/account/signup">Sign Up</a></li> -->
-            <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
+            <!-- <li><a class="nav-link scrollto" href="#services" style="font-size: 20px;">Services</a></li> -->
             
             <li><a class="nav-link scrollto"  style="font-size: 20px;"  href="/auth/contactUs">Contact Us</a></li>
           </ul>
