--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget4/charts-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget4/charts-widget4.component.html
@@ -8,7 +8,7 @@
             <div class="row">
               <div class="col-md-2"></div>
               <label for="example-text-input" class="col-auto col-form-label">Month</label>
-              <div class="col-md-1">
+              <div class="col-md-1" style="width: 120px;">
                 <select class="form-select" formControlName="month" required>
                   <option value="Jan"> Jan </option>
                   <option value="Feb"> Feb </option>
@@ -26,7 +26,7 @@
               </div>
 
               <label for="example-text-input" class="col-auto col-form-label">Year</label>
-              <div class="col-md-1">
+              <div class="col-md-1" style="width: 120px;">
                 <select class="form-select" formControlName="year" required>
                   <option value={{currentYear}}> {{currentYear}} </option>
                   <option value={{lastYear}}> {{lastYear}} </option>
