--- a/src/app/_metronic/partials/content/widgets/feeds/feeds-widget12/feeds-widget12.component.html
+++ b/src/app/_metronic/partials/content/widgets/feeds/feeds-widget12/feeds-widget12.component.html
@@ -972,7 +972,7 @@ PUBLIC "-//W3C//Dth XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/Dt
                     <div class="row">
                         <div class="col-md-4"></div>  
                         <div class="col-auto">           
-                            &nbsp;  <button class="btn btn-success" printSectionId="sanjay" 
+                            &nbsp;  <button class="btn btn-success" printSectionId="sanjay" [useExistingCss]="true"
                             ngxPrint>print </button>
                         </div> 
                         <div class="col-auto">
