--- a/src/app/_metronic/partials/content/widgets/feeds/feeds-widget9/feeds-widget9.component.html
+++ b/src/app/_metronic/partials/content/widgets/feeds/feeds-widget9/feeds-widget9.component.html
@@ -97,7 +97,7 @@
 <body id="contentToConvert">
   <div id="page-wrap">
     <div class="col-md-12">
-      &nbsp; <button class="noprint" style="font-size: medium;" onclick="window.print()"> &nbsp;&nbsp;<i
+      &nbsp; <button class="noprint" style="font-size: medium;" printSectionId="sanjay" [useExistingCss]="true" ngxPrint> &nbsp;&nbsp;<i
           class="fa fa-print" aria-hidden="true"></i> &nbsp;</button>
     </div>
     <div id="sanjay">
