--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget8/lists-widget8.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget8/lists-widget8.component.html
@@ -29,7 +29,7 @@
                       <div class="col-lg-8">
                         <input class="form-control" formControlName="shiftName"
                           oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
-                          placeholder="entr shift name" />
+                          placeholder="enter shift name" />
                       </div>
                     </div>
                     <br>
