--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget10/mixed-widget10.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget10/mixed-widget10.component.html
@@ -110,7 +110,7 @@
     <div class="row noprint">
       <div class="col-md-8"></div>
       <div class="col-auto">
-        <button class="btn btn-success"  printSectionId="sanjay" ngxPrint>print</button>
+        <button class="btn btn-success"  printSectionId="sanjay" [useExistingCss]="true" ngxPrint>print</button>
       </div>
     </div>
 
@@ -327,7 +327,7 @@
     <div class="row noprint">
       <div class="col-md-8"></div>
       <div class="col-auto">
-        <button class="btn btn-success"  printSectionId="sanjay" ngxPrint>print</button>
+        <button class="btn btn-success"  printSectionId="sanjay" [useExistingCss]="true" ngxPrint>print</button>
       </div>
     </div>
 
